--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.3",
     "slugify": "^1.6.6",
+    "stripe": "^18.3.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
