--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,9 @@
   "main": "dist/app.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "build": "tsc",
-    "start": "node dist/app.js"
+    "build": "npm install && tsc",
+    "start": "node dist/app.js",
+    "postinstall": "tsc"
   },
   "keywords": ["express", "typescript", "bookstore", "api"],
   "author": "Abhijeet Kumar",
@@ -25,7 +26,8 @@
     "nodemailer": "^7.0.3",
     "slugify": "^1.6.6",
     "stripe": "^18.3.0",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
@@ -36,7 +38,6 @@
     "@types/node": "^20.11.17",
     "@types/nodemailer": "^6.4.17",
     "@types/slugify": "^1.5.3",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "ts-node-dev": "^2.0.0"
   }
 }
