--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,14 @@
 {
   "name": "book-management-server",
   "version": "1.0.0",
-  "description": "Backend server for book management system",
+  "description": "",
   "main": "dist/app.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "build": "npm install && tsc",
-    "start": "node dist/app.js",
-    "postinstall": "tsc"
+    "build": "tsc",
+    "start": "node dist/app.js"
   },
-  "keywords": ["express", "typescript", "bookstore", "api"],
+  "keywords": [],
   "author": "Abhijeet Kumar",
   "license": "MIT",
   "type": "commonjs",
@@ -17,6 +16,7 @@
     "argon2": "^0.43.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
@@ -26,17 +26,17 @@
     "nodemailer": "^7.0.3",
     "slugify": "^1.6.6",
     "stripe": "^18.3.0",
-    "zod": "^3.25.67",
-    "typescript": "^5.4.5"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
+    "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^20.11.17",
+    "@types/node": "^24.0.3",
     "@types/nodemailer": "^6.4.17",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   }
 }
