--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "stage": "npm run build && git add .",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -35,6 +36,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
+    "serve": "^14.2.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "zod": "^3.25.67"
