--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "type": "commonjs",
   "dependencies": {
     "argon2": "^0.43.0",
+    "book-store": "file:..",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
