--- a/package.json
+++ b/package.json
@@ -3,10 +3,18 @@
   "version": "1.0.0",
   "description": "<h1 align=\"center\" style=\"font-size: 36px;\">\r   <img src=\"./client/src/assets/thumbnail.png\" width=\"35\"/> BOOK STORE\r </h1>",
   "main": "index.js",
-  "scripts": {
-    "build": "npm install --include=dev --prefix server && npm install --include=dev --prefix client && npm run build --prefix client && npm run build --prefix server",
-    "start": "npm run start --prefix server"
-  },
+"scripts": {
+  "install:client": "npm install --include=dev --prefix client",
+  "install:server": "npm install --include=dev --prefix server",
+  "install:all": "npm run install:client && npm run install:server",
+
+  "build:client": "npm run build --prefix client",
+  "build:server": "npm run build --prefix server",
+  "build": "npm run install:all && npm run build:client && npm run build:server",
+
+  "start": "npm run start --prefix server"
+}
+,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Abhithakur7080/bookstore.git"
