--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,13 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+dist
+build
 node_modules
 *.local
 .env
 .env.*
+
 
 # Editor directories and files
 .vscode/*
